Apply Error Prone fixes.